<resources>
    <string name="app_name">AccesShop</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_noticias">Noticias</string>
    <string name="menu_politica">Privacidad</string>
    <item name="botoneraIndex" type="id" />
    <item name="botoneraHome" type="id" />
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_acceder">Acceder</string>
    <string name="menu_registrar">Registrar</string>
    <string name="home_buscar">Buscar</string>
    <string name="home_about">Sobre Nosotros</string>
    <string name="imagen">imagen</string>
    <string name="acceder_con_google">Acceder con Google</string>
    <string name="email">Email</string>
    <string name="privacypolicy">He leído y acepto la <a href="https://drive.google.com/file/d/1yczFVIXJ700bx297gG-Ru5_LLopAxMY4/view?usp=sharing">Política de privacidad</a></string>
    <string name="contraseña">Contraseña</string>
    <string name="repetir_contraseña">Repetir Contraseña</string>
    <string name="Nombre">Nombre del comercio:</string>
    <string name="home_valorar">Valorar Establecimiento</string>
    <string name="home_sugerencia">Realizar Sugerencia</string>
    <string name="home_logout">Desconectar</string>
    <string name="menu_inicio">Inicio</string>
    <string name="menu_busqueda">Busqueda</string>
    <string name="menu_registro">Registrar</string>
    <string name="menu_acced">Acceder</string>
    <string name="menu_aboutus">Sobre Nosotros</string>
    <string name="menu_sugerencias">Sugerencias</string>
    <string name="menu_miSugerencias">Mis Sugerencias</string>
    <string name="menu_valorar">Valorar Establecimiento</string>
    <string name="menu_logout">Desconectar</string>
    <string name="view_suggestions">Ver Sugerencias</string>
    <string name="add_shop">Añadir Tienda</string>
    <string name="edit_shop">Editar Tienda</string>
    <string name="delete_shop">Borrar Tienda</string>
    <string name="delete_user">Borrar Usuario</string>
    <string name="send_suggestion">Enviar sugerencia</string>
    <string name="message">Mensaje</string>
    <string name="titulo">Titulo:</string>
    <string name="mensaje">Mensaje:</string>
    <string name="Identificador">Identificador:</string>
    <string name="dialog_message">¿Esta seguro de que quiere cerrar sesión?</string>
    <string name="dialog_title">Cerrando sesión</string>
    <string name="si">Aceptar</string>
    <string name="dialog_message_confirmar_sugerencia">¿Está seguro de querer enviar la sugerencia?</string>
    <string name="dialog_title_confirmar_sugerencia">Confirmar envío de sugerencia</string>
    <string name="dialog_title_borrar_sigerencia">Borrar Sugerencia</string>
    <string name="title_activity_splash">SplashActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="descripcion_boton_logros">Boton logros (desactivado)</string>
    <string name="logros">LOGROS</string>
    <string name="descripcion_boton_encuestas">Boton encuestas(desactivado)</string>
    <string name="encuestas">ENCUESTAS</string>
    <string name="descripcion_logo_FAMDIF">Logotipo aplicación</string>
    <string name="descripcion_boton_sugerencias">Boton sugerencias</string>
    <string name="descripcion_boton_usuario">Boton usuario</string>
    <string name="descripcion_boton_menu">Boton menu</string>
    <string name="descripcion_boton_valorar">Boton valorar</string>
    <string name="descripcion_boton_mapa">Boton mapa</string>
    <string name="vacio">relleno</string>
    <string name="descripcion_boton_mensajes">Boton mensajes</string>
    <string name="mensajes">MENSAJES</string>
    <string name="descripcion_boton_noticias">Boton noticias</string>
    <string name="noticias">NOTICIAS</string>
    <string name="descripcion_boton_nuevo_usuario">Boton crear usuario</string>
    <string name="descripcion_boton_sobre_nosotros">Boton sobre nosotros</string>
    <string name="hello_world">Hello Square World!</string>
</resources>