<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:id="@+id/index_menu_group">
        <item
            android:id="@+id/item_index"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/item_search"
            android:icon="@drawable/ic_menu_search"
            android:title="@string/menu_busqueda" />
        <item
            android:id="@+id/item_sign_in"
            android:icon="@drawable/ic_menu_registrar"
            android:title="@string/menu_registrar" />
        <item
            android:id="@+id/item_log_in"
            android:icon="@drawable/ic_menu_acceder"
            android:title="@string/menu_acceder"/>
        <item
            android:id="@+id/item_about_us"
            android:icon="@drawable/ic_menu_aboutus"
            android:title= "@string/menu_aboutus"/>
        <item
            android:id="@+id/item_news"
            android:icon="@drawable/ic__info"
            android:title="@string/menu_politica"/>
    </group>
</menu>