<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".fragment.IndexFragment">

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="346dp"
        android:layout_height="164dp"
        android:layout_marginTop="52dp"
        android:contentDescription="@string/descripcion_logo_FAMDIF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_logo_accede_comercios" />

    <ImageButton
        android:id="@+id/indexSignInButton"
        android:layout_width="100dp"
        android:layout_height="65dp"
        android:layout_marginStart="1dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/descripcion_boton_nuevo_usuario"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/indexLogInButton"
        app:layout_constraintStart_toEndOf="@+id/indexAboutUsButton"
        app:srcCompat="@drawable/ic_esquinaderechaindex" />

    <ImageButton
        android:id="@+id/indexLogInButton"
        android:layout_width="105.5dp"
        android:layout_height="65dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/descripcion_boton_usuario"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/indexSignInButton"
        app:srcCompat="@drawable/ic_derindex" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="105.5dp"
        android:layout_height="65dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/descripcion_boton_menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/indexAboutUsButton"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_izq" />

    <ImageButton
        android:id="@+id/indexAboutUsButton"
        android:layout_width="100dp"
        android:layout_height="65dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/descripcion_boton_sobre_nosotros"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageButton4"
        app:srcCompat="@drawable/ic_esquinaizquierdaindex" />


    <ImageButton
        android:id="@+id/indexSearchButton"
        android:layout_width="95dp"
        android:layout_height="133dp"
        android:layout_marginEnd="53dp"
        android:layout_marginBottom="28dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/descripcion_boton_mapa"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_center_button_test" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:orientation="vertical"
        android:weightSum="2"
        app:layout_constraintBottom_toTopOf="@+id/indexSearchButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/imageButton11"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:backgroundTint="#00FFFFFF"
                    android:contentDescription="@string/descripcion_boton_mensajes"
                    app:layout_constraintTop_toBottomOf="@+id/imageView6"
                    app:srcCompat="@drawable/ic_mensajes"
                    tools:layout_editor_absoluteX="250dp" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="120dp"
                    android:layout_height="29dp"
                    android:text="@string/mensajes"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    app:layout_constraintTop_toTopOf="@+id/imageButton11"
                    tools:layout_editor_absoluteX="221dp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/imageButton10"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:backgroundTint="#00FFFFFF"
                    android:contentDescription="@string/descripcion_boton_noticias"
                    app:layout_constraintTop_toBottomOf="@+id/imageView6"
                    app:srcCompat="@drawable/ic_noticias"
                    tools:layout_editor_absoluteX="59dp" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="104dp"
                    android:layout_height="32dp"
                    android:text="@string/noticias"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    app:layout_constraintEnd_toEndOf="@+id/imageButton10"
                    app:layout_constraintTop_toTopOf="@+id/imageButton10" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/imageButton13"
                    android:layout_width="83.3dp"
                    android:layout_height="100dp"
                    android:backgroundTint="#00FFFFFF"
                    android:contentDescription="@string/descripcion_boton_encuestas"
                    app:srcCompat="@drawable/ic_encuestas"
                    tools:layout_editor_absoluteX="-24dp"
                    tools:layout_editor_absoluteY="150dp" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="124dp"
                    android:layout_height="30dp"
                    android:text="@string/encuestas"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    tools:layout_editor_absoluteX="59dp"
                    tools:layout_editor_absoluteY="174dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/imageButton9"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:backgroundTint="#00FFFFFF"
                    android:contentDescription="@string/descripcion_boton_logros"
                    app:srcCompat="@drawable/ic_logros"
                    tools:layout_editor_absoluteX="224dp"
                    tools:layout_editor_absoluteY="168dp" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/logros"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    tools:layout_editor_absoluteX="340dp"
                    tools:layout_editor_absoluteY="176dp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
