<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.HomeFragment">



    <ImageView
        android:id="@+id/logoFamdifHome"
        android:layout_width="346dp"
        android:layout_height="164dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/descripcion_logo_FAMDIF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_logo_accede_comercios" />

    <include
        android:id="@+id/botoneraHome"
        layout="@layout/home_page_buttons"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_135sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <LinearLayout
        android:id="@+id/botonesHome"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_280sdp"
        android:orientation="vertical"
        android:weightSum="2"
        app:layout_constraintBottom_toTopOf="@+id/botoneraHome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoFamdifHome">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/homeMessagesButton"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_100sdp"
                    android:backgroundTint="#00FFFFFF"
                    android:contentDescription="@string/descripcion_boton_mensajes"
                    app:layout_constraintTop_toBottomOf="@+id/imageView6"
                    app:srcCompat="@drawable/ic_mensajes"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    tools:layout_editor_absoluteX="250dp" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="120dp"
                    android:layout_height="29dp"
                    android:text="@string/mensajes"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    app:layout_constraintTop_toTopOf="@+id/imageButton11"
                    tools:layout_editor_absoluteX="221dp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/newsMainHomeBtn"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_100sdp"
                    android:backgroundTint="#00FFFFFF"
                    android:contentDescription="@string/descripcion_boton_noticias"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    app:layout_constraintTop_toBottomOf="@+id/imageView6"
                    app:srcCompat="@drawable/ic_noticias"
                    tools:layout_editor_absoluteX="59dp" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="104dp"
                    android:layout_height="32dp"
                    android:text="@string/noticias"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    app:layout_constraintEnd_toEndOf="@+id/imageButton10"
                    app:layout_constraintTop_toTopOf="@+id/imageButton10" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/homePollsBtn"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_100sdp"
                    android:backgroundTint="#00FFFFFF"
                    android:contentDescription="@string/descripcion_boton_encuestas"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    app:srcCompat="@drawable/ic_encuestas"
                    tools:layout_editor_absoluteX="-24dp"
                    tools:layout_editor_absoluteY="150dp" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="124dp"
                    android:layout_height="30dp"
                    android:text="@string/encuestas"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    tools:layout_editor_absoluteX="59dp"
                    tools:layout_editor_absoluteY="174dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/homeAchievementsBtn"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_100sdp"
                    android:backgroundTint="#00FFFFFF"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/descripcion_boton_logros"
                    app:srcCompat="@drawable/ic_logros"
                    tools:layout_editor_absoluteX="224dp"
                    tools:layout_editor_absoluteY="168dp" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/logros"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    tools:layout_editor_absoluteX="340dp"
                    tools:layout_editor_absoluteY="176dp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
